Avoid jdk.internal.misc error